--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1,3 +1,5 @@
+/* Global Styles */
+
 h1 {
   font-size: 30px;
   margin-top: 40px;
@@ -8,6 +10,83 @@ del {
   color: #ccc;
 }
 
-#sync-icon {
-  animation: rotation 2s infinite linear;
+@media (min-width: 640px) {
+  td,
+  th {
+    word-wrap: break-word;
+    max-width: 200px;
+  }
+}
+
+@media (max-width: 640px) {
+  table,
+  table td,
+  table tr,
+  table th {
+    display: block;
+    text-align: left;
+  }
+
+  table tr {
+    margin-bottom: 60px;
+  }
+
+  table th,
+  table td {
+    margin: 0;
+    padding-left: 25px;
+  }
+  table td {
+    display: list-item;
+    list-style: none;
+    padding-left: 0;
+  }
+  table thead {
+    display: none;
+  }
+}
+
+/* Products */
+
+#save-product-container {
+  margin-top: 50px;
+}
+
+/* Login Page */
+
+#login-body {
+  background-color: #16191b;
+  color: #fff;
+}
+
+.login-box {
+  max-width: 500px;
+  margin: 20vh auto;
+  text-align: center;
+}
+
+.login-box-head {
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
+  background-color: #343a40;
+  color: #fff;
+  font-size: 30px;
+  padding: 30px 10px;
+}
+
+.login-box-body {
+  padding: 10px;
+  background-color: #343a40;
+  border-radius: 1px solid #ccc;
+  border-bottom-left-radius: 15px;
+  border-bottom-right-radius: 15px;
+}
+
+.login-box-body h2 {
+  margin-top: 10px;
+}
+
+/* Dashboard homepage */
+.card-font-size b {
+  font-size: 30px;
 }
