--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -1,1 +1,168 @@
-<%- include('./partials/header') -%> <%- include('./partials/footer') -%>
+<%- include('./partials/header') -%>
+
+<div class="container">
+  <h1>Dashboard</h1>
+
+  <div class="row">
+    <div class="col-xl-12 col-sm-12 mb-3">
+      <div class="card text-white bg-primary o-hidden h-100">
+        <div class="card-body">
+          <div class="text-center card-font-size">
+            Total Products<br />
+            <b id="total-count"></b>
+          </div>
+        </div>
+        <a
+          class="card-footer text-white clearfix small z-1"
+          href="/dashboard/products/"
+        >
+          <span class="float-left">View All</span>
+          <span class="float-right">
+            <i class="fas fa-angle-right"></i>
+          </span>
+        </a>
+      </div>
+    </div>
+  </div>
+
+  <!-- CARD START HERE -->
+
+  <div class="row">
+    <div class="col-xl-3 col-sm-6 mb-3">
+      <div class="card text-white bg-success o-hidden h-100">
+        <div class="card-body">
+          <div class="text-center card-font-size">
+            In Stock<br />
+            <b id="instock-count"></b>
+          </div>
+        </div>
+        <a
+          class="card-footer text-white clearfix small z-1"
+          href="/dashboard/products/instock"
+        >
+          <span class="float-left">View Details</span>
+          <span class="float-right">
+            <i class="fas fa-angle-right"></i>
+          </span>
+        </a>
+      </div>
+    </div>
+
+    <div class="col-xl-3 col-sm-6 mb-3">
+      <div class="card text-white bg-danger o-hidden h-100">
+        <div class="card-body">
+          <div class="text-center card-font-size">
+            Out of Stock<br />
+            <b id="outofstock-count"></b>
+          </div>
+        </div>
+        <a
+          class="card-footer text-white clearfix small z-1"
+          href="/dashboard/products/outofstock"
+        >
+          <span class="float-left">View Details</span>
+          <span class="float-right">
+            <i class="fas fa-angle-right"></i>
+          </span>
+        </a>
+      </div>
+    </div>
+
+    <div class="col-xl-3 col-sm-6 mb-3">
+      <div class="card text-white bg-info o-hidden h-100">
+        <div class="card-body">
+          <div class="text-center card-font-size">
+            Price Changed<br />
+            <b id="pricechanged-count"></b>
+          </div>
+        </div>
+        <a
+          class="card-footer text-white clearfix small z-1"
+          href="/dashboard/products/pricechanged"
+        >
+          <span class="float-left">View Details</span>
+          <span class="float-right">
+            <i class="fas fa-angle-right"></i>
+          </span>
+        </a>
+      </div>
+    </div>
+
+    <div class="col-xl-3 col-sm-6 mb-3">
+      <div class="card text-white bg-warning o-hidden h-100">
+        <div class="card-body">
+          <div class="text-center card-font-size">
+            Back In Stock<br />
+            <b id="backinstock-count"></b>
+          </div>
+        </div>
+        <a
+          class="card-footer text-white clearfix small z-1"
+          href="/dashboard/products/backinstock"
+        >
+          <span class="float-left">View Details</span>
+          <span class="float-right">
+            <i class="fas fa-angle-right"></i>
+          </span>
+        </a>
+      </div>
+    </div>
+  </div>
+
+  <!-- UPDATE CARD START HERE -->
+
+  <h1 class="mt-5">Products Update Information</h1>
+
+  <div class="row">
+    <div class="col-xl-6 col-sm-6 mb-3">
+      <div class="card text-white bg-success o-hidden h-100">
+        <div class="card-body">
+          <div class="text-center card-font-size">
+            Updated Products<br />
+            <b id="updated-count"></b>
+          </div>
+        </div>
+        <a
+          class="card-footer text-white clearfix small z-1"
+          href="/dashboard/products/updated"
+        >
+          <span class="float-left">View Details</span>
+          <span class="float-right">
+            <i class="fas fa-angle-right"></i>
+          </span>
+        </a>
+      </div>
+    </div>
+
+    <div class="col-xl-6 col-sm-6 mb-3">
+      <div class="card text-white bg-danger o-hidden h-100">
+        <div class="card-body">
+          <div class="text-center card-font-size">
+            Not Updated Products<br />
+            <b id="notupdated-count"></b>
+          </div>
+        </div>
+        <a
+          class="card-footer text-white clearfix small z-1"
+          href="/dashboard/products/notupdated"
+        >
+          <span class="float-left">View Details</span>
+          <span class="float-right">
+            <i class="fas fa-angle-right"></i>
+          </span>
+        </a>
+      </div>
+    </div>
+  </div>
+
+  <style>
+    body {
+      background-color: #16191b;
+      color: #fff;
+    }
+  </style>
+  <script>
+    getCountDashboard(); // Get request to get the counts for the dashboard homepage
+  </script>
+  <%- include('./partials/footer') -%>
+</div>
