--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,54 +1,11 @@
 <!DOCTYPE html>
-<head>
-  <title>WebScrapper: Dashboard</title>
-
-  <!-- Mobile viewport -->
-  <meta
-    name="viewport"
-    content="width=device-width, initial-scale=1, shrink-to-fit=no"
-  />
-
-  <!-- jQUery -->
-  <script
-    src="https://code.jquery.com/jquery-3.6.0.min.js"
-    integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
-    crossorigin="anonymous"
-  ></script>
-
-  <!-- Bootstrap packages -->
-  <link
-    rel="stylesheet"
-    href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
-    crossorigin="anonymous"
-  />
-  <script
-    src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-    crossorigin="anonymous"
-  ></script>
-  <script
-    src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-    crossorigin="anonymous"
-  ></script>
-
-  <!-- Fontawesome -->
-  <link rel="stylesheet" href="/fontawesome/css/all.css" />
-  <script src="/fontawesome/js/all.js"></script>
-
-  <!-- Custom Scripts -->
-  <script src="/scripts/main.js"></script>
-
-  <!-- Custom Styles -->
-  <link rel="stylesheet" href="/styles/style.css" />
-</head>
+<%- include('./head') -%>
 <body>
   <!-- Navbar first start -->
 
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
-      <a class="navbar-brand" href="#">WebScrapper</a>
+      <a class="navbar-brand" href="/dashboard">WebScrapper</a>
       <button
         class="navbar-toggler"
         type="button"
@@ -84,11 +41,13 @@
               aria-haspopup="true"
               aria-expanded="false"
             >
-              Shawon
+              <span id="user_name">User</span>
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="#">Change Password</a>
-              <a class="dropdown-item" href="#">Logout</a>
+              <a class="dropdown-item" href="#" onclick="logout(event)"
+                >Logout</a
+              >
             </div>
           </li>
         </ul>
