documented all code

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -3,6 +3,7 @@
 <div class="container">
   <h1>Dashboard</h1>
 
+  <!-- First block that shows total products -->
   <div class="row">
     <div class="col-xl-12 col-sm-12 mb-3">
       <div class="card text-white bg-primary o-hidden h-100">
@@ -25,9 +26,10 @@
     </div>
   </div>
 
-  <!-- CARD START HERE -->
+  <!-- ROW START HERE -->
 
   <div class="row">
+    <!-- Block that shows instock products -->
     <div class="col-xl-3 col-sm-6 mb-3">
       <div class="card text-white bg-success o-hidden h-100">
         <div class="card-body">
@@ -48,6 +50,7 @@
       </div>
     </div>
 
+    <!-- Block that shows out of stock products -->
     <div class="col-xl-3 col-sm-6 mb-3">
       <div class="card text-white bg-danger o-hidden h-100">
         <div class="card-body">
@@ -68,6 +71,7 @@
       </div>
     </div>
 
+    <!-- Block that shows price changed products -->
     <div class="col-xl-3 col-sm-6 mb-3">
       <div class="card text-white bg-info o-hidden h-100">
         <div class="card-body">
@@ -88,6 +92,7 @@
       </div>
     </div>
 
+    <!-- Block that shows back in stock products -->
     <div class="col-xl-3 col-sm-6 mb-3">
       <div class="card text-white bg-warning o-hidden h-100">
         <div class="card-body">
@@ -114,6 +119,7 @@
   <h1 class="mt-5">Products Update Information</h1>
 
   <div class="row">
+    <!-- Block that shows updated products -->
     <div class="col-xl-6 col-sm-6 mb-3">
       <div class="card text-white bg-success o-hidden h-100">
         <div class="card-body">
@@ -134,6 +140,7 @@
       </div>
     </div>
 
+    <!-- block that shows not updated products -->
     <div class="col-xl-6 col-sm-6 mb-3">
       <div class="card text-white bg-danger o-hidden h-100">
         <div class="card-body">
@@ -155,6 +162,7 @@
     </div>
   </div>
 
+  <!-- Some inline styles to keep it seperate from other pages -->
   <style>
     body {
       background-color: #16191b;
