--- a/views/products/all.ejs
+++ b/views/products/all.ejs
@@ -1,10 +1,11 @@
 <%- include('../partials/header') -%>
 
 <div class="container">
+  <!-- List of products include -->
   <%- include('../partials/products-list') -%>
 
   <script>
-    getAllProducts();
+    getAllProducts(); //get all products and update dom
   </script>
 
   <%- include('../partials/footer') -%>
