--- a/views/products/notupdated.ejs
+++ b/views/products/notupdated.ejs
@@ -5,7 +5,7 @@
   <%- include('../partials/products-list') -%>
 
   <script>
-    getPriceChanged(); // get price changed product
+    getNotUpdated(); // get not updated product and update dom
   </script>
 
   <%- include('../partials/footer') -%>
