--- a/views/products/outofstock.ejs
+++ b/views/products/outofstock.ejs
@@ -4,7 +4,7 @@
   <%- include('../partials/products-list') -%>
 
   <script>
-    getOutOfStock();
+    getOutOfStock(); // get out of stock product and update dom
   </script>
 
   <%- include('../partials/footer') -%>
