--- a/views/products/updated.ejs
+++ b/views/products/updated.ejs
@@ -5,7 +5,7 @@
   <%- include('../partials/products-list') -%>
 
   <script>
-    getPriceChanged(); // get price changed product
+    getUpdated(); // get updated products and update dom
   </script>
 
   <%- include('../partials/footer') -%>
