--- a/views/users/all.ejs
+++ b/views/users/all.ejs
@@ -8,7 +8,7 @@
   
     <!-- Button to add all products -->
   
-      <button class="btn btn-dark" onclick="window.location='/products/add'">
+      <button class="btn btn-dark" onclick="window.location='/dashboard/users/add'">
         <i class="fas fa-plus"></i> New User
       </button>
   
@@ -27,13 +27,14 @@
   
       <!-- tbody to be filled using ajax -->
       <tbody class="content"></tbody>
-  
-      <!-- Success message -->
-      <div class="success"></div> 
-  
-      <!-- Error message -->
-      <div class="error"></div>
+      
     </table>
+
+    <!-- Success message -->
+    <div class="success text-success"></div> 
+  
+    <!-- Error message -->
+    <div class="error text-danger"></div>
   </div>
 
   <script>
