--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,7 +5,10 @@
 
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
+      <!-- Navbar brand -->
       <a class="navbar-brand" href="/dashboard">WebScrapper</a>
+
+      <!-- Collapse button -->
       <button
         class="navbar-toggler"
         type="button"
@@ -18,7 +21,9 @@
         <span class="navbar-toggler-icon"></span>
       </button>
 
+      <!-- Content to be collapsed -->
       <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+        <!-- List of navigations 1 -->
         <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
           <li class="nav-item">
             <a class="nav-link" href="/dashboard">Dashboard</a>
@@ -30,6 +35,8 @@
             <a class="nav-link" href="/dashboard/users">Users</a>
           </li>
         </ul>
+
+        <!-- List of navigation 2 -->
         <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
           <li class="nav-item dropdown">
             <a
@@ -41,10 +48,15 @@
               aria-haspopup="true"
               aria-expanded="false"
             >
+              <!-- To be replaced by real name using Javascript -->
               <span id="user_name">User</span>
             </a>
+
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="#">Change Password</a>
+              <!-- Edit User button -->
+              <a class="dropdown-item" href="#" id="user_edit">Edit User</a>
+
+              <!-- Logout button -->
               <a class="dropdown-item" href="#" onclick="logout(event)"
                 >Logout</a
               >
