--- a/views/products/instock.ejs
+++ b/views/products/instock.ejs
@@ -1,10 +1,11 @@
 <%- include('../partials/header') -%>
 
 <div class="container">
+  <!-- List of products include -->
   <%- include('../partials/products-list') -%>
 
   <script>
-    getInStock();
+    getInStock(); // get instock product and update dom
   </script>
 
   <%- include('../partials/footer') -%>
