--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -6,7 +6,7 @@
   <!-- First block that shows total products -->
   <div class="row">
     <div class="col-xl-12 col-sm-12 mb-3">
-      <div class="card text-white bg-primary o-hidden h-100">
+      <div class="card text-white bg-primary o-hidden h-100 fade-in-fast">
         <div class="card-body">
           <div class="text-center card-font-size">
             Total Products<br />
@@ -31,7 +31,7 @@
   <div class="row">
     <!-- Block that shows instock products -->
     <div class="col-xl-3 col-sm-6 mb-3">
-      <div class="card text-white bg-success o-hidden h-100">
+      <div class="card text-white bg-success o-hidden h-100 fade-in-medium">
         <div class="card-body">
           <div class="text-center card-font-size">
             In Stock<br />
@@ -52,7 +52,7 @@
 
     <!-- Block that shows out of stock products -->
     <div class="col-xl-3 col-sm-6 mb-3">
-      <div class="card text-white bg-danger o-hidden h-100">
+      <div class="card text-white bg-danger o-hidden h-100 fade-in-medium">
         <div class="card-body">
           <div class="text-center card-font-size">
             Out of Stock<br />
@@ -73,7 +73,7 @@
 
     <!-- Block that shows price changed products -->
     <div class="col-xl-3 col-sm-6 mb-3">
-      <div class="card text-white bg-info o-hidden h-100">
+      <div class="card text-white bg-info o-hidden h-100 fade-in-medium">
         <div class="card-body">
           <div class="text-center card-font-size">
             Price Changed<br />
@@ -94,7 +94,7 @@
 
     <!-- Block that shows back in stock products -->
     <div class="col-xl-3 col-sm-6 mb-3">
-      <div class="card text-white bg-warning o-hidden h-100">
+      <div class="card text-white bg-warning o-hidden h-100 fade-in-medium">
         <div class="card-body">
           <div class="text-center card-font-size">
             Back In Stock<br />
@@ -121,7 +121,7 @@
   <div class="row">
     <!-- Block that shows updated products -->
     <div class="col-xl-6 col-sm-6 mb-3">
-      <div class="card text-white bg-success o-hidden h-100">
+      <div class="card text-white bg-success o-hidden h-100 fade-in-slow">
         <div class="card-body">
           <div class="text-center card-font-size">
             Updated Products<br />
@@ -142,7 +142,7 @@
 
     <!-- block that shows not updated products -->
     <div class="col-xl-6 col-sm-6 mb-3">
-      <div class="card text-white bg-danger o-hidden h-100">
+      <div class="card text-white bg-danger o-hidden h-100 fade-in-slow">
         <div class="card-body">
           <div class="text-center card-font-size">
             Not Updated Products<br />
