--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,7 @@
 <%- include('./partials/head') -%>
 <body id="login-body">
 <!-- Login page start -->
-<div class="login-box">
+<div class="login-box fade-in-fast">
     <h1>WebScrapper</h1>
   <div class="login-box-head">Login</div>
   <div class="login-box-body">
@@ -27,7 +27,7 @@
         />
       </div>
       <!-- Submit button -->
-      <div class="form-group">
+      <div class="form-group fade-in-slow">
         <button type="submit" class="btn btn-primary w-100">Login</button>
       </div>
       <div class="error text-danger"></div>
