--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -18,6 +18,19 @@ del {
   }
 }
 
+/* Navigation */
+.nav-item {
+  background-size: 0px;
+}
+
+.nav-item:hover {
+  background-size: auto;
+  background-color: rgba(0, 0, 0, 0.1);
+  border-radius: 5px;
+  transition: 0.5s;
+}
+
+/* Make table mobile response */
 @media (max-width: 640px) {
   table,
   table td,
@@ -92,7 +105,7 @@ del {
   font-size: 30px;
 }
 
-/* Fade In animation */
+/* Fade In animation start*/
 .fade-in-fast {
   animation: fadeIn ease 2s;
   -webkit-animation: fadeIn ease 2s;
@@ -161,3 +174,4 @@ del {
     opacity: 1;
   }
 }
+/* Fade in animation end */
